stacked tiles, draft for rules, keayboard bindings.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="fr" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="utf-8" />
-		<title>Laura Palisse</title>
+		<title>Caverne</title>
 		<!--<link rel="stylesheet" type="text/css" href="style.css" media="all" />-->
 		
 		<script src="modernizr.custom.js"></script>
@@ -15,7 +15,7 @@
 	<body id="index" style="text-align:center;">
 		<h1>Caverne</h1>
 
-		<canvas id="canvas" width="600" height="400" style="border: thin solid black">
+		<canvas id="canvas" width="608" height="400" style="border: thin solid black">
 			Votre navigateur ne supporte pas l'élément Canvas. Utilisez un navigateur web plus récent pour jouer à ce jeu.
 		</canvas>
 	</body>
